--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -8,4 +8,5 @@
   </div>
 
 </div>
-<button (click)="goBack()">go back</button>
+<button (click)="save()">Save Hero</button>
+<button (click)="goBack()">Go Back</button>
